--- a/compose.yaml
+++ b/compose.yaml
@@ -28,7 +28,7 @@ services:
   dev-app:
     profiles: [ dev ]
     depends_on: 
-      postgres:
+      postgres-service:
         condition: service_healthy
     networks: [ demo ]
     build:
@@ -40,15 +40,18 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=3000
+      # - DATABASE_URL=postgresql://$(cat /run/secrets/postgres_user):$(cat /run/secrets/postgres_password)@postgres-service:5432/$(cat /run/secrets/postgres_db)?schema=public
+      # - DB_USER_FILE=/run/secrets/postgres_user
+      # - DB_PASSWORD_FILE=/run/secrets/postgres_password
+      # - DB_NAME_FILE=/run/secrets/postgres_db
     #   - AWS_REGION=/run/secrets/aws_region
     #   - AWS_ACCESS_KEY_ID=/run/secrets/aws_access_key_id
     #   - AWS_SECRET_ACCESS_KEY=/run/secrets/aws_secret_access_key
     #   - AWS_S3_BUCKET=/run/secrets/aws_s3_bucket
     # secrets:
-    #   - aws_region
-    #   - aws_access_key_id
-    #   - aws_secret_access_key
-    #   - aws_s3_bucket
+    #   - postgres_user
+    #   - postgres_password
+    #   - postgres_db
     ports:
       - "3001:3000"
     # develop:
@@ -60,8 +63,13 @@ services:
       - .:/app
       - /app/node_modules
     command: yarn dev
+    healthcheck:
+      test: ['CMD-SHELL', 'curl -f http://localhost:3000/api/health || exit 1']
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
-  postgres:
+  postgres-service:
     image: postgres:16-alpine
     hostname: postgres
     container_name: postgres
